# forte_opcua_integration

./: .gitignore  .gitmodules  ANodeID.cpp  ANodeID.h  CMakeLists.txt  CMakeLists.txt~  GEN_PUBLISH_OPCUA.cpp  GEN_PUBLISH_OPCUA.h  GEN_SUBSCRIBE_OPCUA.cpp  GEN_SUBSCRIBE_OPCUA.h  NodeConfig.cpp  NodeConfig.h  OPCUA_NodeConfig.cpp  OPCUA_NodeConfig.cpp.bak  OPCUA_NodeConfig.h  OPCUA_NodeConfig.h.bak  OPCUA_NodeID.cpp  OPCUA_NodeID.h  OPC_UA_Publisher.cpp  OPC_UA_Publisher.h  opcua_layer.cpp  opcua_layer.h  opcuahandler.cpp  opcuahandler.h
61499_FBs/: AOPCUANodeID.cpp  AOPCUANodeID.h  AOPCUANodeID.h~  GEN_PUBLISH_OPCUA.cpp  GEN_PUBLISH_OPCUA.cpp~  GEN_PUBLISH_OPCUA.h  GEN_PUBLISH_OPCUA.h~  GEN_SUBSCRIBEOPCUA.cpp  GEN_SUBSCRIBE_OPCUA.cpp~  GEN_SUBSCRIBE_OPCUA.h~  OPCUA_NodeID.cpp  OPCUA_NodeID.h  OPCUA_NodeID.h~
UAModeler_namespaces/: .ua  forte_init_namespace  forte_init_namespace.ua  namespace_forte_opcua.ua  namespace_forte_opcua.xml
server_namespaces/: flipflop_custom_ns.c  flipflop_custom_ns.h
